// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <TabHeader
    alm="bitbucket"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    timeout={100}
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <TabHeader
    alm="bitbucket"
    onCreate={[MockFunction]}
  />
  <BitbucketTable
    definitions={Array []}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
  />
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <TabHeader
    alm="bitbucket"
    onCreate={[MockFunction]}
  />
  <BitbucketTable
    definitions={Array []}
    onDelete={[MockFunction]}
    onEdit={[MockFunction]}
  />
  <AlmPRDecorationFormModal
    bindingDefinition={
      Object {
        "key": "key",
        "personalAccessToken": "asdf1234",
        "url": "http://bbs.enterprise.com",
      }
    }
    onCancel={[MockFunction]}
    onSubmit={[MockFunction]}
  >
    <Component />
  </AlmPRDecorationFormModal>
</Fragment>
`;
